tests/invalid/import_inside_function/main.py
def main() -> None:
    import imports.module_a
